--- a/Option/settings.json
+++ b/Option/settings.json
@@ -1,2 +1,1 @@
-
-{"width" : 600, "height" : 400, "fps" : 60, "fs" : false}
+{"width": 600, "height": 400, "fps": 60, "fs": false, "bgm_vol": 0.23999999999999932, "sfx_vol": 1.0}
